--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,10 @@
     padding-top: 80px;
 }
 
+button:hover {
+    background-color: rgba(0, 0, 0, 0.1); /* subtle background color on hover */
+}
+
 .card {
     background-color: var(--clr21);
     border: 1px solid #ddd;
@@ -18,6 +22,15 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+/* Header button styles */
+header button {
+    background-color: transparent;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+/*
 .product-cont {
     margin: 16px;
     padding: 16px;
@@ -47,3 +60,4 @@
 .product-cont:hover p {
     color: var(--clr02);
 }
+*/
