--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,6 +16,7 @@ button:hover {
     text-align: start;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px; /* Зазор между элементами */
 }
 
@@ -33,7 +34,7 @@ button:hover {
 
 .card h3 {
     margin-top: 0;
-    /* color: #333; */
+    color: var(--clr22);
     font-size: 1.5em;
     font-weight: bold;
     margin-bottom: 10px;
