--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,11 +25,48 @@ header {
     position: fixed;
     height: 4rem;
     width: 100%;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
     padding-left: 1rem;
     padding-right: 1rem;
+    z-index: 1;
+}
+/* Header button styles */
+header button {
+    background-color: transparent;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
     display: flex;
-    z-index: 1
+    align-items: center;
+    justify-content: center;
+}
+
+header .logo {
+    margin-right: 20px;
+}
+
+header .nav-container {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: left;
+    flex-grow: 1;
+}
+
+header .nav-button {
+    background-color: transparent;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header .nav-button:hover {
+    background-color: rgba(0, 0, 0, 0.1); /* subtle background color on hover */
 }
 
 .justyfy-center {
@@ -39,7 +76,6 @@ header {
 .flex {
     display: flex;
 }
-
 /* Стили для заголовков */
 h1, h2, h3, h4, h5, h6 {
     color: #2c3e50;
