--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,7 @@
     --clr12: #e6e6e6;
     --clr21: #4d4d4d;
     --clr22: #d9d9d9;
+    --clrt: #6aeeff;
 }
 
 * {
@@ -44,7 +45,29 @@ header button {
 }
 
 header .logo {
-    margin-right: 20px;
+    margin-right: 0px;
+    margin-left: 5px;
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    gap: 15px;
+}
+header .logo p {
+    margin: 0 0 0 0;
+    font-size: 1.8em;
+    color: #1992ef;
+}
+header .logo img {
+    border-radius: 50%;
+}
+header .line {
+    margin-left: 25px;
+    margin-right: 15px;
+    width: 2px;
+    display: block;
+    /* height: 100%; */
+    height: 35px;
+    background-color: #ddd;
 }
 
 header .nav-container {
@@ -60,7 +83,6 @@ header .nav-button {
     border: none;
     padding: 10px 20px;
     cursor: pointer;
-    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -78,8 +100,7 @@ header .nav-button:hover {
 }
 /* Стили для заголовков */
 h1, h2, h3, h4, h5, h6 {
-    color: #2c3e50;
-    margin-bottom: 15px;
+    color: var(--clr02);
 }
 
 #content {
