--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,13 +1,3 @@
-#content {
-    text-align: center;
-}
-
-.container {
-    margin: 0 auto;
-    padding: 20px;
-    padding-top: 80px;
-}
-
 button:hover {
     background-color: rgba(0, 0, 0, 0.1); /* subtle background color on hover */
 }
@@ -68,7 +58,7 @@ button:hover {
     max-width: 800px;
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: white;
+    background-color: var(--clr21);
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     justify-content: center;
@@ -90,6 +80,12 @@ button:hover {
     margin-top: 0;
 }
 
+.slide img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
 .slider-btn {
     position: absolute;
     top: 50%;
@@ -104,15 +100,18 @@ button:hover {
 
 .slider-btn.prev {
     left: 10px;
+    z-index: 1;
 }
 
 .slider-btn.next {
     right: 10px;
+    z-index: 1;
 }
 
 .dots {
     text-align: center;
     margin-top: 10px;
+    user-select: none;
 }
 
 .dot {
