--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,16 @@ button:hover {
     background-color: rgba(0, 0, 0, 0.1); /* subtle background color on hover */
 }
 
+.line {
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    width: 100%;
+    display: block;
+    /* height: 100%; */
+    height: 2px;
+    background-color: #ddd;
+}
+
 /* Карточки */
 #card-container {
     text-align: start;
