--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,30 +1,3 @@
-
-/* Адаптация слайдера */
-@media (max-width: 768px) {
-    .slider-container {
-        width: 95%; /* Уменьшаем ширину слайдера */
-        padding: 10px;
-    }
-
-    .slide {
-        padding: 10px; /* Уменьшаем внутренние отступы */
-    }
-
-    .slide img {
-        width: 100px; /* Уменьшаем изображения */
-        height: 100px;
-    }
-
-    .dots {
-        margin-top: 5px; /* Уменьшаем отступ точек */
-    }
-
-    .dot {
-        width: 8px; /* Уменьшаем размер точек */
-        height: 8px;
-    }
-}
-
 button:hover {
     background-color: rgba(0, 0, 0, 0.1); /* subtle background color on hover */
 }
@@ -64,6 +37,7 @@ button:hover {
     margin-bottom: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
+    display: grid;
 
     /* Адаптивность для мобильных устройств */
     @media (max-width: 768px) {
@@ -187,6 +161,32 @@ button:hover {
 
 .dot.active {
     background-color: #717171;
+}
+
+/* Адаптация слайдера */
+@media (max-width: 768px) {
+    .slider-container {
+        width: 95%; /* Уменьшаем ширину слайдера */
+        padding: 10px;
+    }
+
+    .slide {
+        padding: 10px; /* Уменьшаем внутренние отступы */
+    }
+
+    .slide img {
+        width: 100px; /* Уменьшаем изображения */
+        height: 100px;
+    }
+
+    .dots {
+        margin-top: 5px; /* Уменьшаем отступ точек */
+    }
+
+    .dot {
+        width: 8px; /* Уменьшаем размер точек */
+        height: 8px;
+    }
 }
 /*
 .product-cont {
